# python-oracledb

./: pyproject.toml
